# Learn_Agentic_Together

Lead_Generator/: leads.csv  main.py  pyproject.toml
Oops-Ai/: oop.py
Practices_AI_Agents/: Prcts.py
dropship_agent/: main.py  pyproject.toml  requirements.txt
hello_agent/: main.py  pyproject.toml
oop-project/: trials.ipynb
oop-project/research/: main.py
saas_agent/: pyproject.toml
travel_agent/: main.py  pyproject.toml  tools.py
