[project]
name = "lead-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=1.12.0",
    "beautifulsoup4>=4.13.4",
    "google-generativeai>=0.8.5",
    "googlesearch-python>=1.3.0",
    "instagrapi>=2.1.5",
    "instaloader>=4.14.1",
    "openai-agents>=0.0.19",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
]
